filter lat/long when parsed

--- a/college_details_16.html
+++ b/college_details_16.html
@@ -154,7 +154,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Geography</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  38.901173, -77.041952</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name2"></a>
@@ -249,7 +249,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Early Childhood Education and Teaching</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Music Teacher Education</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Drama and Dance Teacher Education</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  36.069637, -111.875153</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name3"></a>
@@ -415,7 +415,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Social Sciences, Other</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  35.183443, -111.655</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name4"></a>
@@ -521,7 +521,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Forensic Psychology</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Aeronautics/Aviation/Aerospace Science and Technology, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Aviation/Airway Management and Operations</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  28.556077, 77.208709</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name5"></a>
@@ -637,7 +637,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Airline/Commercial/Professional Pilot and Flight Crew</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Aviation/Airway Management and Operations</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  30.353723, -81.607306</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name6"></a>
@@ -727,7 +727,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;American Government and Politics (United States</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Aviation/Airway Management and Operations</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  52.7548, 0.39383</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name7"></a>
@@ -835,7 +835,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;International Relations and Affairs</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  26.080089, -80.248546</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name8"></a>
@@ -977,7 +977,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Economics, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  28.598998, -81.197125</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name9"></a>
@@ -1087,7 +1087,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Economics, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  27.947399, -82.464856</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name10"></a>
@@ -1185,7 +1185,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Anthropology</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  -32.510972, 137.812247</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name11"></a>
@@ -1296,7 +1296,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Electrical/Electronics Equipment Installation and Repair, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Automobile/Automotive Mechanics Technology/Technician</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  34.686607, -95.75244</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name12"></a>
@@ -1425,7 +1425,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Food Preparation/Professional Cooking/Kitchen Assistant</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Mechanic and Repair Technologies/Technicians, Other</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  39.082431, -95.6669</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name13"></a>
@@ -1530,7 +1530,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Economics, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  39.344666, -76.583609</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name14"></a>
@@ -1663,7 +1663,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Heavy Equipment Maintenance Technology/Technician</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Carpentry/Carpenter</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Welding Technology/Welder</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  46.85461, -113.965524</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name15"></a>
@@ -1765,7 +1765,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Urban Studies/Affairs</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Psychology, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;History, General</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  42.684359, -73.825834</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name16"></a>
@@ -1894,7 +1894,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Psychology, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;History, General</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  43.00075, -78.788714</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name17"></a>
@@ -2019,7 +2019,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Social Sciences, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Economics, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  35.408071, -78.739247</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name18"></a>
@@ -2104,7 +2104,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Economics, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  35.503219, -80.83393</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name19"></a>
@@ -2375,7 +2375,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;International Relations and Affairs</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  36.107187, -79.501321</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name21"></a>
@@ -2475,7 +2475,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Econometrics and Quantitative Economics</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  36.001517, -78.524473</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name22"></a>
@@ -2597,7 +2597,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Social Studies Teacher Education</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Teacher Education and Professional Development, Specific Subject Areas, Other</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;History, General</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  34.514789, -82.638747</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name23"></a>
@@ -2705,7 +2705,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Economics, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  32.982074, -80.07231</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name24"></a>
@@ -2806,7 +2806,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Economics, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  33.702129, -78.923482</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name25"></a>
@@ -2905,7 +2905,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Chemistry Teacher Education</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Criminology</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  6.453056, 3.395833</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name26"></a>
@@ -2984,7 +2984,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Psychology, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;History, General</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  -32.561441, 115.708083</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name27"></a>
@@ -3066,7 +3066,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Psychology, General</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;History, General</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  42.819547, -108.727032</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name28"></a>
@@ -3159,7 +3159,7 @@
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Music Teacher Education</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;Physical Education Teaching and Coaching</li>
 <li>&nbsp;&nbsp;&nbsp;&nbsp;History, General</li>
-<li><b>latitude_logitude:</b> </li>
+<li><b>latitude_logitude:</b>  38.044405, -84.499857</li>
 <li><b>mascot:</b> </li>
     </ul>
     <a id="name29"></a>
