--- a/college_details_16.html
+++ b/college_details_16.html
@@ -2481,6 +2481,129 @@
     <a id="name22"></a>
     <ul>
     <br><li><a href="#name21">prev</a>&nbsp;&nbsp;<a href="#name23">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
+<li><b>name:</b>  Lehigh University</li>
+<li><b>state:</b>  Pennsylvania</li>
+<li><b>city:</b>  Bethlehem</li>
+<li><b>level:</b>  NCAA DI</li>
+<li><b>college_link:</b><a href=" https://sportsrecruits.com/athletic-scholarships/womens-volleyball/pennsylvania/lehigh_university" target="_blank"> https://sportsrecruits.com/athletic-scholarships/womens-volleyball/pennsylvania/lehigh_university</a></li>
+<li><b>state_link:</b><a href=" https://sportsrecruits.com/athletic-scholarships/womens-volleyball/pennsylvania" target="_blank"> https://sportsrecruits.com/athletic-scholarships/womens-volleyball/pennsylvania</a></li>
+<li><b>google_link:</b><a href=" https://www.google.com/search?q=Lehigh+University" target="_blank"> https://www.google.com/search?q=Lehigh+University</a></li>
+<li><b>google_mascot_link:</b><a href=" https://www.google.com/search?q=Lehigh+University+mascot" target="_blank"> https://www.google.com/search?q=Lehigh+University+mascot</a></li>
+<li><b>google_roster_link:</b><a href=" https://www.google.com/search?q=Lehigh+University+volleyball+roster" target="_blank"> https://www.google.com/search?q=Lehigh+University+volleyball+roster</a></li>
+<li><b>google_coaches_link:</b><a href=" https://www.google.com/search?q=Lehigh+University+volleyball+coaches" target="_blank"> https://www.google.com/search?q=Lehigh+University+volleyball+coaches</a></li>
+<li><b>google_schedule_link:</b><a href=" https://www.google.com/search?q=Lehigh+University+volleyball+schedule" target="_blank"> https://www.google.com/search?q=Lehigh+University+volleyball+schedule</a></li>
+<li><b>wikipedia_link:</b><a href=" https://en.wikipedia.org/wiki/Lehigh_University" target="_blank"> https://en.wikipedia.org/wiki/Lehigh_University</a></li>
+<li><b>conference:</b>  Patriot League</li>
+<li><b>academic_selectivity:</b>  More Selective</li>
+<li><b>undergrad_enrollment:</b>  5075</li>
+<li><b>control_affilication:</b>  Private not-for-profit (no religious affiliation)</li>
+<li><b>overview:</b> Lehigh University does offer athletic scholarships for Volleyball. Need-based and academic scholarships are available for student-athletes. Athletic scholarships are available for NCAA Division I, NCAA Division II, NAIA and NJCAA. On average, 34% of all student-athletes receive athletic scholarships.</li>
+<li><b>head_coach_name:</b>  Alexa Keckler</li>
+<li><b>assistant_coach_name:</b>  Sarah Gomish</li>
+<li><b>student_ratio:</b>  10-1</li>
+<li><b>garduation_rate:</b>  88%</li>
+<li><b>enrollment_by_gender:</b>  56% Male / 44% Female</li>
+<li><b>calendar_system:</b>  Semester</li>
+<li><b>retention_rate:</b>  95%</li>
+<li><b>on_campus_housing:</b>  Yes</li>
+<li><b>acceptance_rate:</b>  30%</li>
+<li><b>total_applicants:</b>  12,843</li>
+<li><b>sat_students_submitting:</b>  63%</li>
+<li><b>sat_reading_range:</b>  590-680</li>
+<li><b>sat_math_range:</b>  640-740</li>
+<li><b>sat_writing_range:</b>  Not Reported</li>
+<li><b>act_students_submitting:</b>  37%</li>
+<li><b>act_composite:</b>  29-32</li>
+<li><b>act_english:</b>  Not Reported</li>
+<li><b>act_math:</b>  Not Reported</li>
+<li><b>act_writing:</b>  Not Reported</li>
+<li><b>requirements_open_admission_policy:</b>  No</li>
+<li><b>requirements_application_fee:</b>  $70</li>
+<li><b>requirements_recomedations:</b>  Required</li>
+<li><b>requirements_secondary_school_record:</b>  Required</li>
+<li><b>requirements_secondary_school_rank:</b>  Neither required nor recommended</li>
+<li><b>requirements_secondary_school_gpa:</b>  Recommended</li>
+<li><b>cost_in_state_total:</b>  $63,075</li>
+<li><b>cost_in_state_tuition:</b>  $43,220</li>
+<li><b>cost_in_state_fee:</b>  $300</li>
+<li><b>cost_in_state_on_campus_room:</b>  Not Reported</li>
+<li><b>cost_out_state_total:</b>  $63,075</li>
+<li><b>cost_out_state_tuition:</b>  $43,220</li>
+<li><b>cost_out_state_fee:</b>  $300</li>
+<li><b>cost_out_state_on_campus_room:</b>  Not Reported</li>
+<li><b>cost_percent_undergrad_aid:</b>  68%</li>
+<li><b>majors:</b> </li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Architecture</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;English Language and Literature, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Design and Visual Communications, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Drama and Dramatics/Theatre Arts, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Art/Art Studies, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Art History, Criticism and Conservation</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Music, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Music History, Literature, and Theory</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;German Language and Literature</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;French Language and Literature</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Spanish Language and Literature</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Chinese Language and Literature</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Religion/Religious Studies</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Logistics, Materials, and Supply Chain Management</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Accounting</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Business/Managerial Economics</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Finance, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Management Science</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Marketing/Marketing Management, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Pre-Dentistry Studies</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Pre-Medicine/Pre-Medical Studies</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;African Studies</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;American/United States Studies/Civilization</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Asian Studies/Civilization</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Russian Studies</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Women's Studies</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Science, Technology and Society</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;International/Global Studies</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Ancient Studies/Civilization</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Cognitive Science</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Multi-/Interdisciplinary Studies, Other</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Environmental Studies</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Bioengineering and Biomedical Engineering</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Chemical Engineering</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Civil Engineering, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Computer Engineering, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Electrical and Electronics Engineering</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Environmental/Environmental Health Engineering</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Materials Engineering</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Mechanical Engineering</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Industrial Engineering</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Engineering, Other</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Mathematics, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Statistics, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Information Technology</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Information Science/Studies</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Computer Science</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Biology/Biological Sciences, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Biochemistry</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Molecular Biology</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Neuroscience</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Astronomy</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Astrophysics</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Chemistry, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Geology/Earth Science, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Geological and Earth Sciences/Geosciences, Other</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Physics, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Journalism</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Technical and Scientific Communication</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Anthropology</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;International Relations and Affairs</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Political Science and Government, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Sociology</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;Psychology, General</li>
+<li>&nbsp;&nbsp;&nbsp;&nbsp;History, General</li>
+<li><b>latitude_logitude:</b>  40.63063, -75.48195</li>
+<li><b>mascot:</b> </li>
+    </ul>
+    <a id="name23"></a>
+    <ul>
+    <br><li><a href="#name22">prev</a>&nbsp;&nbsp;<a href="#name24">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Anderson University (SC)</li>
 <li><b>state:</b>  South Carolina</li>
 <li><b>city:</b>  Anderson</li>
@@ -2600,9 +2723,9 @@
 <li><b>latitude_logitude:</b>  34.514789, -82.638747</li>
 <li><b>mascot:</b> </li>
     </ul>
-    <a id="name23"></a>
+    <a id="name24"></a>
     <ul>
-    <br><li><a href="#name22">prev</a>&nbsp;&nbsp;<a href="#name24">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
+    <br><li><a href="#name23">prev</a>&nbsp;&nbsp;<a href="#name25">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Charleston Southern University</li>
 <li><b>state:</b>  South Carolina</li>
 <li><b>city:</b>  Charleston</li>
@@ -2708,9 +2831,9 @@
 <li><b>latitude_logitude:</b>  32.982074, -80.07231</li>
 <li><b>mascot:</b> </li>
     </ul>
-    <a id="name24"></a>
+    <a id="name25"></a>
     <ul>
-    <br><li><a href="#name23">prev</a>&nbsp;&nbsp;<a href="#name25">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
+    <br><li><a href="#name24">prev</a>&nbsp;&nbsp;<a href="#name26">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Coastal Carolina University</li>
 <li><b>state:</b>  South Carolina</li>
 <li><b>city:</b>  Conway</li>
@@ -2809,9 +2932,9 @@
 <li><b>latitude_logitude:</b>  33.702129, -78.923482</li>
 <li><b>mascot:</b> </li>
     </ul>
-    <a id="name25"></a>
+    <a id="name26"></a>
     <ul>
-    <br><li><a href="#name24">prev</a>&nbsp;&nbsp;<a href="#name26">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
+    <br><li><a href="#name25">prev</a>&nbsp;&nbsp;<a href="#name27">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Coker University</li>
 <li><b>state:</b>  South Carolina</li>
 <li><b>city:</b>  Hartsville</li>
@@ -2908,9 +3031,9 @@
 <li><b>latitude_logitude:</b>  6.453056, 3.395833</li>
 <li><b>mascot:</b> </li>
     </ul>
-    <a id="name26"></a>
+    <a id="name27"></a>
     <ul>
-    <br><li><a href="#name25">prev</a>&nbsp;&nbsp;<a href="#name27">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
+    <br><li><a href="#name26">prev</a>&nbsp;&nbsp;<a href="#name28">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Erskine College</li>
 <li><b>state:</b>  South Carolina</li>
 <li><b>city:</b>  Due West</li>
@@ -2987,9 +3110,9 @@
 <li><b>latitude_logitude:</b>  -32.561441, 115.708083</li>
 <li><b>mascot:</b> </li>
     </ul>
-    <a id="name27"></a>
+    <a id="name28"></a>
     <ul>
-    <br><li><a href="#name26">prev</a>&nbsp;&nbsp;<a href="#name28">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
+    <br><li><a href="#name27">prev</a>&nbsp;&nbsp;<a href="#name29">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Lander University</li>
 <li><b>state:</b>  South Carolina</li>
 <li><b>city:</b>  Greenwood</li>
@@ -3069,9 +3192,9 @@
 <li><b>latitude_logitude:</b>  42.819547, -108.727032</li>
 <li><b>mascot:</b> </li>
     </ul>
-    <a id="name28"></a>
+    <a id="name29"></a>
     <ul>
-    <br><li><a href="#name27">prev</a>&nbsp;&nbsp;<a href="#name29">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
+    <br><li><a href="#name28">prev</a>&nbsp;&nbsp;<a href="#name30">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Limestone University</li>
 <li><b>state:</b>  South Carolina</li>
 <li><b>city:</b>  Gaffney</li>
@@ -3162,9 +3285,9 @@
 <li><b>latitude_logitude:</b>  38.044405, -84.499857</li>
 <li><b>mascot:</b> </li>
     </ul>
-    <a id="name29"></a>
+    <a id="name30"></a>
     <ul>
-    <br><li><a href="#name28">prev</a>&nbsp;&nbsp;<a href="#name30">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
+    <br><li><a href="#name29">prev</a>&nbsp;&nbsp;<a href="#name31">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  University of North Texas</li>
 <li><b>state:</b>  Texas</li>
 <li><b>city:</b>  Denton</li>
@@ -3306,7 +3429,7 @@
 <li><b>latitude_logitude:</b> </li>
 <li><b>mascot:</b> </li>
     <a id="bottom"></a>
-    <br><li><a href="#name28">prev</a>&nbsp;&nbsp;<a href="#top">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
+    <br><li><a href="#name29">prev</a>&nbsp;&nbsp;<a href="#top">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
     </ul>
   </body>
 </html>
