try iframes, little slow but cleaner

--- a/college_details_kip.html
+++ b/college_details_kip.html
@@ -11,6 +11,13 @@
     <ul>
     <a id="name1"></a>
     <ul>
+    <iframe id="frame1"
+    title="University of Montevallo"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/alabama/university_of_montevallo">
+    </iframe>
     <br><li><a href="#name0">prev</a>&nbsp;&nbsp;<a href="#name2">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  University of Montevallo</li>
 <li><b>state:</b>  Alabama</li>
@@ -94,6 +101,13 @@
     </ul>
     <a id="name2"></a>
     <ul>
+    <iframe id="frame2"
+    title="Arizona Christian University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/arizona/arizona_christian_university">
+    </iframe>
     <br><li><a href="#name1">prev</a>&nbsp;&nbsp;<a href="#name3">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Arizona Christian University</li>
 <li><b>state:</b>  Arizona</li>
@@ -173,6 +187,13 @@
     </ul>
     <a id="name3"></a>
     <ul>
+    <iframe id="frame3"
+    title="Grand Canyon University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/arizona/grand_canyon_university">
+    </iframe>
     <br><li><a href="#name2">prev</a>&nbsp;&nbsp;<a href="#name4">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Grand Canyon University</li>
 <li><b>state:</b>  Arizona</li>
@@ -268,6 +289,13 @@
     </ul>
     <a id="name4"></a>
     <ul>
+    <iframe id="frame4"
+    title="California State University, Dominguez Hills"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/california/california_state_university_dominguez_hills">
+    </iframe>
     <br><li><a href="#name3">prev</a>&nbsp;&nbsp;<a href="#name5">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  California State University, Dominguez Hills</li>
 <li><b>state:</b>  California</li>
@@ -369,6 +397,13 @@
     </ul>
     <a id="name5"></a>
     <ul>
+    <iframe id="frame5"
+    title="Barry University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/barry_university">
+    </iframe>
     <br><li><a href="#name4">prev</a>&nbsp;&nbsp;<a href="#name6">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Barry University</li>
 <li><b>state:</b>  Florida</li>
@@ -475,6 +510,13 @@
     </ul>
     <a id="name6"></a>
     <ul>
+    <iframe id="frame6"
+    title="Flagler College"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/flagler_college">
+    </iframe>
     <br><li><a href="#name5">prev</a>&nbsp;&nbsp;<a href="#name7">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Flagler College</li>
 <li><b>state:</b>  Florida</li>
@@ -566,6 +608,13 @@
     </ul>
     <a id="name7"></a>
     <ul>
+    <iframe id="frame7"
+    title="Florida Institute of Technology"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/florida_institute_of_technology">
+    </iframe>
     <br><li><a href="#name6">prev</a>&nbsp;&nbsp;<a href="#name8">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Florida Institute of Technology</li>
 <li><b>state:</b>  Florida</li>
@@ -672,6 +721,13 @@
     </ul>
     <a id="name8"></a>
     <ul>
+    <iframe id="frame8"
+    title="Jacksonville University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/jacksonville_university">
+    </iframe>
     <br><li><a href="#name7">prev</a>&nbsp;&nbsp;<a href="#name9">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Jacksonville University</li>
 <li><b>state:</b>  Florida</li>
@@ -788,6 +844,13 @@
     </ul>
     <a id="name9"></a>
     <ul>
+    <iframe id="frame9"
+    title="Keiser University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/keiser_university">
+    </iframe>
     <br><li><a href="#name8">prev</a>&nbsp;&nbsp;<a href="#name10">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Keiser University</li>
 <li><b>state:</b>  Florida</li>
@@ -846,6 +909,13 @@
     </ul>
     <a id="name10"></a>
     <ul>
+    <iframe id="frame10"
+    title="Keiser University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/keiser_university">
+    </iframe>
     <br><li><a href="#name9">prev</a>&nbsp;&nbsp;<a href="#name11">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Keiser University</li>
 <li><b>state:</b>  Florida</li>
@@ -956,6 +1026,13 @@
     </ul>
     <a id="name11"></a>
     <ul>
+    <iframe id="frame11"
+    title="Lynn University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/lynn_university">
+    </iframe>
     <br><li><a href="#name10">prev</a>&nbsp;&nbsp;<a href="#name12">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Lynn University</li>
 <li><b>state:</b>  Florida</li>
@@ -1046,6 +1123,13 @@
     </ul>
     <a id="name12"></a>
     <ul>
+    <iframe id="frame12"
+    title="Nova Southeastern University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/nova_southeastern_university">
+    </iframe>
     <br><li><a href="#name11">prev</a>&nbsp;&nbsp;<a href="#name13">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Nova Southeastern University</li>
 <li><b>state:</b>  Florida</li>
@@ -1154,6 +1238,13 @@
     </ul>
     <a id="name13"></a>
     <ul>
+    <iframe id="frame13"
+    title="Palm Beach Atlantic University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/palm_beach_atlantic_university">
+    </iframe>
     <br><li><a href="#name12">prev</a>&nbsp;&nbsp;<a href="#name14">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Palm Beach Atlantic University</li>
 <li><b>state:</b>  Florida</li>
@@ -1267,6 +1358,13 @@
     </ul>
     <a id="name14"></a>
     <ul>
+    <iframe id="frame14"
+    title="University of Central Florida"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/university_of_central_florida">
+    </iframe>
     <br><li><a href="#name13">prev</a>&nbsp;&nbsp;<a href="#name15">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  University of Central Florida</li>
 <li><b>state:</b>  Florida</li>
@@ -1409,6 +1507,13 @@
     </ul>
     <a id="name15"></a>
     <ul>
+    <iframe id="frame15"
+    title="University of Miami (FL)"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/florida/university_ofiami_fl">
+    </iframe>
     <br><li><a href="#name14">prev</a>&nbsp;&nbsp;<a href="#name16">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  University of Miami (FL)</li>
 <li><b>state:</b>  Florida</li>
@@ -1578,6 +1683,13 @@
     </ul>
     <a id="name16"></a>
     <ul>
+    <iframe id="frame16"
+    title="Central College (IA)"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/iowa/central_college_ia">
+    </iframe>
     <br><li><a href="#name15">prev</a>&nbsp;&nbsp;<a href="#name17">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Central College (IA)</li>
 <li><b>state:</b>  Iowa</li>
@@ -1670,6 +1782,13 @@
     </ul>
     <a id="name17"></a>
     <ul>
+    <iframe id="frame17"
+    title="Emporia State University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/kansas/emporia_state_university">
+    </iframe>
     <br><li><a href="#name16">prev</a>&nbsp;&nbsp;<a href="#name18">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Emporia State University</li>
 <li><b>state:</b>  Kansas</li>
@@ -1768,6 +1887,13 @@
     </ul>
     <a id="name18"></a>
     <ul>
+    <iframe id="frame18"
+    title="Washington College (MD)"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/maryland/washington_colleged">
+    </iframe>
     <br><li><a href="#name17">prev</a>&nbsp;&nbsp;<a href="#name19">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Washington College (MD)</li>
 <li><b>state:</b>  Maryland</li>
@@ -1854,6 +1980,13 @@
     </ul>
     <a id="name19"></a>
     <ul>
+    <iframe id="frame19"
+    title="Endicott College"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/massachusetts/endicott_college">
+    </iframe>
     <br><li><a href="#name18">prev</a>&nbsp;&nbsp;<a href="#name20">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Endicott College</li>
 <li><b>state:</b>  Massachusetts</li>
@@ -1951,6 +2084,13 @@
     </ul>
     <a id="name20"></a>
     <ul>
+    <iframe id="frame20"
+    title="University of Nebraska at Kearney"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/nebraska/university_of_nebraska_at_kearney">
+    </iframe>
     <br><li><a href="#name19">prev</a>&nbsp;&nbsp;<a href="#name21">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  University of Nebraska at Kearney</li>
 <li><b>state:</b>  Nebraska</li>
@@ -2046,6 +2186,13 @@
     </ul>
     <a id="name21"></a>
     <ul>
+    <iframe id="frame21"
+    title="Ithaca College"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/new-york/ithaca_college">
+    </iframe>
     <br><li><a href="#name20">prev</a>&nbsp;&nbsp;<a href="#name22">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Ithaca College</li>
 <li><b>state:</b>  New York</li>
@@ -2190,6 +2337,13 @@
     </ul>
     <a id="name22"></a>
     <ul>
+    <iframe id="frame22"
+    title="Union College (NY)"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/new-york/union_college_ny">
+    </iframe>
     <br><li><a href="#name21">prev</a>&nbsp;&nbsp;<a href="#name23">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Union College (NY)</li>
 <li><b>state:</b>  New York</li>
@@ -2288,6 +2442,13 @@
     </ul>
     <a id="name23"></a>
     <ul>
+    <iframe id="frame23"
+    title="Cameron University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/oklahoma/cameron_university">
+    </iframe>
     <br><li><a href="#name22">prev</a>&nbsp;&nbsp;<a href="#name24">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Cameron University</li>
 <li><b>state:</b>  Oklahoma</li>
@@ -2385,6 +2546,13 @@
     </ul>
     <a id="name24"></a>
     <ul>
+    <iframe id="frame24"
+    title="Oklahoma Christian University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/oklahoma/oklahoma_christian_university">
+    </iframe>
     <br><li><a href="#name23">prev</a>&nbsp;&nbsp;<a href="#name25">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Oklahoma Christian University</li>
 <li><b>state:</b>  Oklahoma</li>
@@ -2443,6 +2611,13 @@
     </ul>
     <a id="name25"></a>
     <ul>
+    <iframe id="frame25"
+    title="Linfield University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/oregon/linfield_college">
+    </iframe>
     <br><li><a href="#name24">prev</a>&nbsp;&nbsp;<a href="#name26">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Linfield University</li>
 <li><b>state:</b>  Oregon</li>
@@ -2544,6 +2719,13 @@
     </ul>
     <a id="name26"></a>
     <ul>
+    <iframe id="frame26"
+    title="Lehigh University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/pennsylvania/lehigh_university">
+    </iframe>
     <br><li><a href="#name25">prev</a>&nbsp;&nbsp;<a href="#name27">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Lehigh University</li>
 <li><b>state:</b>  Pennsylvania</li>
@@ -2667,6 +2849,13 @@
     </ul>
     <a id="name27"></a>
     <ul>
+    <iframe id="frame27"
+    title="Coker University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/south-carolina/coker_college">
+    </iframe>
     <br><li><a href="#name26">prev</a>&nbsp;&nbsp;<a href="#name28">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Coker University</li>
 <li><b>state:</b>  South Carolina</li>
@@ -2766,6 +2955,13 @@
     </ul>
     <a id="name28"></a>
     <ul>
+    <iframe id="frame28"
+    title="Midwestern State University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/texas/midwestern_state_university">
+    </iframe>
     <br><li><a href="#name27">prev</a>&nbsp;&nbsp;<a href="#name29">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Midwestern State University</li>
 <li><b>state:</b>  Texas</li>
@@ -2870,6 +3066,13 @@
     </ul>
     <a id="name29"></a>
     <ul>
+    <iframe id="frame29"
+    title="Pacific Lutheran University"
+    loading="lazy"
+    width="100%"
+    height="400"
+    src="https://sportsrecruits.com/athletic-scholarships/womens-volleyball/washington/pacific_lutheran_university">
+    </iframe>
     <br><li><a href="#name28">prev</a>&nbsp;&nbsp;<a href="#name30">next</a>&nbsp;&nbsp;<a href="#top">top</a>&nbsp;&nbsp;<a href="#bottom">bottom</a></li>
 <li><b>name:</b>  Pacific Lutheran University</li>
 <li><b>state:</b>  Washington</li>
